Styled Search "Menu", fixed issue with invisible file upload moving out of place on  mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -180,7 +180,7 @@ article.card {
 }
 
 .create-menu ul {
-	padding-left: 1em;
+	padding-left: 0.5em;
 }
 
 .create-menu ul li {
@@ -196,11 +196,25 @@ form.search ul li div, .create-menu ul li div {
     background-position-x: 0% !important;
     padding-left: 50px;
 }
-
 form.search ul li div span, .create-menu ul li div span {
 	width: 200px;
     display: inline-block;
     padding-top: 1em;
+}
+.search ul {
+	list-style-type: none;
+	padding-left: 0.5em;
+}
+.search ul li {
+	margin-bottom: 1em;
+}
+.search label, .search input {
+	margin-right: 0em;
+    float: left;
+    margin-left: 1.5em;
+}
+.search input[type=text] {
+	margin-top: 0.5em;
 }
 
 ul li div.title {
@@ -208,10 +222,15 @@ ul li div.title {
 }
 
 input#file-upload {
-	    position: relative;
-    left: -157px;
-    top: 17px;
+	position: relative;
+    left: -58px;
+    top: -30px;
     opacity: 0;
+    max-width: 185px;
+    background: #FFF;
+    border-radius: 2px;
+    padding: 10px;
+    box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
 }
 
 .notifications-area {
@@ -259,7 +278,12 @@ input#file-upload {
 }
 
 form.search {
-
+    position: fixed;
+    top: 72px;
+    left: 0px;
+    background: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    box-shadow: 0px 2px 3px rgba(0,0,0,0.25);
 }
 
 .signin div {
@@ -310,31 +334,24 @@ form.search {
 .text-editor {
 
 }
-
 .image-editor {
 
 }
-
 .model-editor {
 
 }
-
 .terminal {
 
 }
-
 .sharing {
 
 }
-
 .settings {
 
 }
-
 .messaging {
 
 }
-
 .emojis span {
 	padding: 0.5em;
 	display: inline-block;
@@ -343,14 +360,30 @@ form.search {
 }
 
 
-
-
 @media screen and (min-width: 961px) {
 	main {
 		margin-top: 1em;
 	}
+	form.search {
+		position: fixed;
+		top: 147px;
+		left: 71px;
+		background: rgba(255, 255, 255, 0.9);
+		width: 284px;
+		margin: auto;
+		box-shadow: 0px 2px 3px rgba(0,0,0,0.25);
+		text-align: center;
+		padding: 0.25em;
+	}
 	form.search ul li div span, .create-menu ul li div span {
 		padding-top: 0em;
+	}
+	.search ul {
+		padding-left: 0;
+		float: left;
+		position: fixed;
+		left: 86px;
+		 top: 192px;
 	}
     .menu {
         width: 60px;
@@ -362,7 +395,6 @@ form.search {
 		padding-top: 10px;
 		padding-left: 10px;
     }
-
 	.create-menu {
 		top: 0px;
 		left: 72px;
@@ -370,12 +402,10 @@ form.search {
 		width: auto;
 		box-shadow: none;
 	}
-
 	.create-menu ul {
 		padding-left: 1em;
     	padding-top: 66px;
 	}
-
 	.icon.text {
 		color: #303030;
 		padding-top: 1em;
@@ -386,7 +416,6 @@ form.search {
 		vertical-align: top;
 		background-position-x: 100%;
 	}
-
 	.menu .icon {
 		margin-top: 0.5em;
 		margin-bottom: 0.5em;
@@ -411,8 +440,6 @@ form.search {
 		box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 7px;
 		background-color: rgba(255, 255, 255, 0.592157);
 	}
-
-
 	img.logo {
 		display: inline-block;
 	}
